k8s/apps/atuin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin-server
  labels:
    app: atuin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atuin-server
  template:
    metadata:
      name: atuin-server
      labels:
        app: atuin-server
    spec:
      containers:
        - name: atuin-server
          image: ghcr.io/atuinsh/atuin:18.8.0
          args:
            - server
            - start
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 250m
              memory: 1Gi
