k8s/apps/atuin/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-server
spec:
  selector:
    app: atuin-server
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: atuin.s.h-a.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atuin-server
                port:
                  name: http
  tls:
    - secretName: atuin-server-tls
      hosts:
        - atuin.s.h-a.cc
